# claude-xmpp-bridge

./: .coverage  .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  NOTES.md  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: messages_cs.toml  messages_de.toml  messages_en.toml  messages_pl.toml  messages_sk.toml
examples/hooks/: README.md  format-location.sh  notification.sh  permission-ask.sh  session-end.sh  session-start-register.sh  session-start-title.sh  settings.json  stop.sh  task-completed.sh
examples/opencode/: README.md  oc  opencode.json
examples/opencode/plugins/: xmpp-bridge.js
examples/sandbox/: README.md  sandbox  sandbox.bash-completion
examples/systemd/: claude-xmpp-bridge.service
src/claude_xmpp_bridge/: __init__.py  ask.py  audit.py  bridge.py  cli.py  client.py  config.py  email_notify.py  locks.py  mcp_server.py  messages.py  multiplexer.py  notify.py  rate_limit.py  registry.py  setup.py  socket_server.py  xmpp.py
tests/: conftest.py  helpers.py  test_ask.py  test_audit.py  test_bridge.py  test_cli.py  test_client.py  test_client_integration.py  test_config.py  test_email_notify.py  test_locks.py  test_mcp_server.py  test_messages.py  test_multiplexer.py  test_notify.py  test_plugin_sandbox.py  test_rate_limit.py  test_registry.py  test_screen_title_integration.py  test_setup.py  test_socket_server.py  test_xmpp.py
tests/integration/: multi_agent_test.md
