[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "claude-xmpp-bridge"
version = "0.8.26"
description = "XMPP bridge for Claude Code — route messages between Jabber and Claude sessions"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "TeTeHacko" }]
keywords = ["xmpp", "claude", "bridge", "jabber", "notifications"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Communications :: Chat",
]
dependencies = ["slixmpp>=1.8", "mcp>=1.26"]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.scripts]
claude-xmpp-bridge = "claude_xmpp_bridge.cli:bridge_main"
claude-xmpp-client = "claude_xmpp_bridge.cli:client_main"
claude-xmpp-notify = "claude_xmpp_bridge.cli:notify_main"
claude-xmpp-ask = "claude_xmpp_bridge.cli:ask_main"
claude-xmpp-bridge-setup = "claude_xmpp_bridge.setup:setup_main"

[project.urls]
Homepage = "https://github.com/TeTeHacko/claude-xmpp-bridge"
Repository = "https://github.com/TeTeHacko/claude-xmpp-bridge"
Issues = "https://github.com/TeTeHacko/claude-xmpp-bridge/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/claude_xmpp_bridge"]

[tool.hatch.build.targets.wheel.shared-data]
"examples/hooks/session-start-title.sh" = "share/claude-xmpp-bridge/hooks/session-start-title.sh"
"examples/hooks/session-start-register.sh" = "share/claude-xmpp-bridge/hooks/session-start-register.sh"
"examples/hooks/session-end.sh" = "share/claude-xmpp-bridge/hooks/session-end.sh"
"examples/hooks/notification.sh" = "share/claude-xmpp-bridge/hooks/notification.sh"
"examples/hooks/task-completed.sh" = "share/claude-xmpp-bridge/hooks/task-completed.sh"
"examples/hooks/stop.sh" = "share/claude-xmpp-bridge/hooks/stop.sh"
"examples/hooks/permission-ask.sh" = "share/claude-xmpp-bridge/hooks/permission-ask.sh"
"examples/hooks/format-location.sh" = "share/claude-xmpp-bridge/hooks/format-location.sh"
"examples/hooks/settings.json" = "share/claude-xmpp-bridge/hooks/settings.json"
"examples/systemd/claude-xmpp-bridge.service" = "share/claude-xmpp-bridge/systemd/claude-xmpp-bridge.service"
"examples/opencode/plugins/xmpp-bridge.js" = "share/claude-xmpp-bridge/opencode/plugins/xmpp-bridge.js"
"examples/opencode/opencode.json" = "share/claude-xmpp-bridge/opencode/opencode.json"
"examples/sandbox/sandbox" = "share/claude-xmpp-bridge/sandbox/sandbox"
"examples/sandbox/sandbox.bash-completion" = "share/claude-xmpp-bridge/sandbox/sandbox.bash-completion"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "S", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "S105", "S106", "S108", "S603", "S607"]

[tool.mypy]
strict = true
python_version = "3.11"

[tool.coverage.run]
source = ["claude_xmpp_bridge"]

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["tests"]
markers = [
    "integration: tests that spawn real subprocesses and bridge sockets (behaviour, not structure)",
]
